ChildLocalSurfaceIdAllocator to use Parent values

The parent and child assume currently assume different initial values.
This is leading to a situation where the parent sends a message (1,1)
and the child updates its internals to (1,0).

This patch uses the same initial values.

BUG=810974

Change-Id: I1deb005a445b65e82e79f3c04aaaf323efbedd32
Reviewed-on: https://chromium-review.googlesource.com/912286
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Chris Blume <cblume@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536245}
Former-commit-id: 3583febf5c6cd470df88fcf0e4c590831ad0c206